--- a/_posts/Year 2/2021-09-20-Week-84.md
+++ b/_posts/Year 2/2021-09-20-Week-84.md
@@ -1,25 +1,25 @@
 ---
 layout: post
-title: Week 84-87 - Profit Margins
+title: Week 84-87 -  Cost Analysis
 author: Mohammad Khan
 category: [Screenplay]
 tags: [screenplay, year 2]
 ---
-Everything comes with a price. All that matters is how much are you willing to pay?
+Nothing's free in this world
 
-<p>Week 84: 09/20/2021: Profit Margins - Teaser.</p>
-<!--  <p><a href="">
- Profit Margins -Teaser.pdf</a></p> -->
+<p>Week 84: 09/20/2021: Cost Analysis - Teaser.</p>
+<p><a href="https://drive.google.com/file/d/1IVgXB4IxcDys76_Tv-nWBGs8RXI6epNm/view?usp=sharing">
+ Cost Analysis -Teaser.pdf</a></p> 
 
-<p>Week 85: 09/27/2021: Profit Margins - Act 1.</p>
-<!-- <p><a href="">Profit Margins -Act 1.pdf</a></p> -->
+<p>Week 85: 09/27/2021: Cost Analysis - Act 1.</p>
+<!-- <p><a href="">Cost Analysis -Act 1.pdf</a></p> -->
 
-<p>Week 86: 10/04/2021: Profit Margins - Act 2.</p>
-<!-- <p><a href="">Profit Margins -Act 2.pdf</a></p> -->
+<p>Week 86: 10/04/2021: Cost Analysis - Act 2.</p>
+<!-- <p><a href="">Cost Analysis -Act 2.pdf</a></p> -->
 
-<p>Week 87: 10/11/2021: Profit Margins - Act 3.</p>
-<!-- <p><a href="">Profit Margins -Act 3.pdf</a></p> -->
+<p>Week 87: 10/11/2021: Cost Analysis - Act 3.</p>
+<!-- <p><a href="">Cost Analysis -Act 3.pdf</a></p> -->
 
 
-Or view full script below: 
-<!-- <iframe src="" width="100%" height="480" allow="autoplay"></iframe> -->
+Or view current script below: 
+<iframe src="https://drive.google.com/file/d/1IVgXB4IxcDys76_Tv-nWBGs8RXI6epNm/preview" width="100%" height="480" allow="autoplay"></iframe>
