--- a/_posts/Year 2/2021-09-20-Week-84.md
+++ b/_posts/Year 2/2021-09-20-Week-84.md
@@ -15,11 +15,11 @@ Nothing's free in this world
 <p><a href="https://drive.google.com/file/d/1gQXCPuksmPRg1BAiMpbUvc_8AcYMJdug/view?usp=sharing">Cost Analysis -Act 1.pdf</a></p>
 
 <p>Week 86: 10/04/2021: Cost Analysis - Act 2.</p>
-<!-- <p><a href="https://drive.google.com/file/d/1PgsFV1CFrGkTMg_v5kTkFZ0WmGYAUMZi/view?usp=sharing">Cost Analysis -Act 2.pdf</a></p> -->
+<p><a href="https://drive.google.com/file/d/1PgsFV1CFrGkTMg_v5kTkFZ0WmGYAUMZi/view?usp=sharing">Cost Analysis -Act 2.pdf</a></p>
 
 <p>Week 87: 10/11/2021: Cost Analysis - Act 3.</p>
 <!-- <p><a href="https://drive.google.com/file/d/1c0KgOCyHTKm_mxWloOLbZRsOqi75MmKL/view?usp=sharing">Cost Analysis -Act 3.pdf</a></p> -->
 
 
 Or view current script below: 
-<iframe src="https://drive.google.com/file/d/1gQXCPuksmPRg1BAiMpbUvc_8AcYMJdug/preview" width="100%" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1PgsFV1CFrGkTMg_v5kTkFZ0WmGYAUMZi/preview" width="100%" height="480" allow="autoplay"></iframe>
