--- a/_posts/Year 2/2021-10-18-Week-88.md
+++ b/_posts/Year 2/2021-10-18-Week-88.md
@@ -5,57 +5,6 @@ author: Mohammad Khan
 category: [Poem]
 tags: [poem, year 2]
 ---
+A poem on Awareness.
 
-Seeing what others can’t see
-
-Feeling what others can’t feel
-
-Hearing what others can’t hear
-
-Tasting what others can’t taste
-
-A veil lifted and tossed aside, 
-
-an afterimage of what you once knew.
-
-Gone.
-<br>
-<br>
-
-And what remains is a blind light
-
-of a frigid warmth
-
-of a deafening silence
-
-of a soft oblivion
-
-of a sour melancholy
-
-of a cursed blessing
-
-and it’s beautiful.
-
-<br>
-<br>
-A sight only you can see.
-
-Life’s shades revealed.
-
-All its vibrant colors, movements, and husks of decay,
-
-a richness explored through experience.
-
-<br>
-<br>
-A strawberry never tasted so sweet,
-
-the brush of the wind so gentle,
-
-the warm embrace of silence
-
-and the awakening of isolation. 
-
-Everything changes for you.
-
-All you did was open your eyes.
+<iframe src="https://drive.google.com/file/d/19YEavXeDjMrDgQLV7frP2JrrvEnE0RZ8/preview" width="100%" height="480" allow="autoplay"></iframe>
