--- a/_posts/Year 2/2021-11-01-Week-90.md
+++ b/_posts/Year 2/2021-11-01-Week-90.md
@@ -7,4 +7,7 @@ tags: [The Observer, year 2]
 ---
 You only exist only through the eyes of others.
 
+A series of work told from an Observer viewing life from a 3rd person point of view.
+
 <iframe src="https://drive.google.com/file/d/14AMD9VdUMAC97rXmwiKbixRc82NHzeU7/preview" width="100%" height="480" allow="autoplay"></iframe>
+
