--- a/_posts/Year 2/2021-09-13-Week-83.md
+++ b/_posts/Year 2/2021-09-13-Week-83.md
@@ -15,4 +15,4 @@ Or view it below:
 <!-- <embed src="https://drive.google.com/file/d/1yuwGeSgwdqbh53swaJLqo-Tz86DmNyBT/view?usp=sharing#toolbar=0" width="800px" height="2100px" /> -->
 
 
-<iframe src="https://drive.google.com/file/d/1gDgn2AQQ_zPgj7wnv5-XsNIjXPgQtg4c/preview" width="640" height="480" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1gDgn2AQQ_zPgj7wnv5-XsNIjXPgQtg4c/preview" width="100%" height="480" allow="autoplay"></iframe>
