--- a/_posts/Year 2/2021-11-05-Week-91.md
+++ b/_posts/Year 2/2021-11-05-Week-91.md
@@ -14,7 +14,7 @@ All of the stories past, present,and future will be moved to the wordpress site.
 
 Click the link below to view the wordpress site. Hope to see you there!
 
-https://mostories261398878.wordpress.com/
+<link href="https://mostories261398878.wordpress.com/">
 
  <head>
   <link rel="MoStories Wordpress site" href="https://mostories261398878.wordpress.com/">
